# projects

./: Dockerfile  Dockerfile.mkdocs  docker-compose.yml  generate_openapi.py  openapi.json
car_api/models/: users.py
docs/: tests.md
fast_master/car_api/: .coverage  .env  car.db  mkdocs.yml  pyproject.toml
fast_master/car_api/car_api/: app.py
fast_master/car_api/car_api/core/: security.py  settings.py
fast_master/car_api/car_api/models/: __init__.py  cars.py  users.py
fast_master/car_api/car_api/routers/: auth.py  brands.py  cars.py  users.py
fast_master/car_api/car_api/schemas/: auth.py  brands.py  cars.py  users.py
fast_master/car_api/docs/: api_endpoints.md  authentication_security.md  configuration.md  contribution.md  deploy.md  development.md  guidelines.md  index.md  installation.md  prerequisites.md  release_notes.md  structure.md  system_modeling.md  tests.md
fast_master/car_api/migrations/: env.py
fast_master/car_api/migrations/versions/: 096e8a994744_create_users_table.py
fast_master/car_api/tests/: conftest.py  test_auth.py  test_brands.py  test_cars.py  test_db.py  test_users.py
migrations/versions/: 541cc8d0ccc1_create_card_and_brand_tables.py
